# CppVSCodeTemplate

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md
source/: main.cpp
